# fromthetransistor

./: transistors.md
s1/: transistors.md
s2/: hardware.md
s2/LED/: CMakeLists.txt  blinkLED.v  blinkLED_tb.cc
s2/hello_verilog/: CMakeLists.txt  hello.v  hello_tb.cc
